--- a/templates/images/source_detail.html
+++ b/templates/images/source_detail.html
@@ -25,7 +25,7 @@
                             <p class="card-text text-muted">{{ source.description }}</p>
                         {% endif %}
                         <a href="{{ source.url }}" target="_blank" class="btn btn-outline-primary btn-sm">
-                            <i class="fas fa-external-link-alt me-1"></i>Visit Original Site
+                            <i class="fas fa-external-link-alt me-1"></i>Homepage
                         </a>
                     </div>
                     <div class="text-end">
